Fri Sep 14 16:24:04 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_expandarray): assignment should be placed
	  after creating new array.

Fri Sep 14 16:17:30 2007  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/runner.rb: add a stress test (-s).

Fri Sep 14 16:14:28 2007  Koichi Sasada  <ko1@atdot.net>

	* vm.h, eval_intern.h: move some macros to eval_intern.h.

	* eval_jump.ci (rb_f_throw): fix to use NEW_THROW_OBJECT().

	* eval.c (rb_f_loop): remove additional macro.

Fri Sep 14 16:12:10 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_expandarray): should be volatile value for GC.

Thu Sep 13 15:42:03 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): inline cache entries are overwritten
	  in iseq_build_body().

Thu Sep 13 14:00:15 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (brace_block): should use compstmt.  patch submitted by
	  Kirill A. Shutemov <k.shutemov AT gmail.com>  [ruby-core:12154].

Thu Sep 13 13:47:08 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_id2str): fixed typo.

Wed Sep 12 23:12:22 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (proc_options): -W should be allowed in RUBYOPT
	  environment variable.  [ruby-core:12118]

Wed Sep 12 15:19:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_sysopen): should not use alloca for unknowen size
	  input.  [ruby-dev:31775]

	* parse.y (rb_id2str): ditto.

	* marshal.c (w_float): use snprintf instead of sprintf.

Tue Sep 11 17:28:00 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb (Tempfile::make_tmpname): Allow to specify a
	  suffix for a temporary file name.

	* lib/tempfile.rb (Tempfile::make_tmpname): Make temporary file
	  names less predictable by including a random string.
	  [inspired by: akr]

Tue Sep 11 17:25:59 2007  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb: Add shellescape() and shelljoin().
